--- a/STM32_Libs.uvprojx
+++ b/STM32_Libs.uvprojx
@@ -7,7 +7,7 @@
 
   <Targets>
     <Target>
-      <TargetName>Target 1</TargetName>
+      <TargetName>Application</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
       <pCCUsed>6180000::V6.18::ARMCLANG</pCCUsed>
@@ -49,7 +49,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\Objects\</OutputDirectory>
-          <OutputName>GardenCleanWater</OutputName>
+          <OutputName>STM32_Libs</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>0</CreateHexFile>
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>.\FreeRTOS\ARM_CM3;.\FreeRTOS\Inc;.\Application\Inc;.\Tasks\Inc</IncludePath>
+              <IncludePath>.\Application\Inc;.\FreeRTOS\Inc;.\FreeRTOS\ARM_CM3;.\Tasks\Inc</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -395,11 +395,6 @@
           <GroupName>FreeRTOS</GroupName>
           <Files>
             <File>
-              <FileName>port.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\FreeRTOS\ARM_CM3\port.c</FilePath>
-            </File>
-            <File>
               <FileName>croutine.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\FreeRTOS\Src\croutine.c</FilePath>
@@ -439,6 +434,11 @@
               <FileType>1</FileType>
               <FilePath>.\FreeRTOS\Src\timers.c</FilePath>
             </File>
+            <File>
+              <FileName>port.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\FreeRTOS\ARM_CM3\port.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -450,14 +450,14 @@
               <FilePath>.\Tasks\Src\led_task.cpp</FilePath>
             </File>
             <File>
-              <FileName>pidTask.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\Application\Src\pidTask.cpp</FilePath>
-            </File>
-            <File>
               <FileName>test_task.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\Tasks\Src\test_task.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>pidTask.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\Tasks\Src\pidTask.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -480,20 +480,25 @@
           <GroupName>Analog</GroupName>
           <Files>
             <File>
-              <FileName>analog_out.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\Application\Src\analog_out.cpp</FilePath>
-            </File>
-            <File>
               <FileName>analog_monitor.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\Application\Src\analog_monitor.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>analog_out.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\Application\Src\analog_out.cpp</FilePath>
             </File>
           </Files>
         </Group>
         <Group>
           <GroupName>Discrete</GroupName>
           <Files>
+            <File>
+              <FileName>coil.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\Application\Src\coil.cpp</FilePath>
+            </File>
             <File>
               <FileName>gpio_common.cpp</FileName>
               <FileType>8</FileType>
@@ -503,11 +508,6 @@
               <FileName>simple_input.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\Application\Src\simple_input.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>coil.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\Application\Src\coil.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -535,14 +535,14 @@
               <FilePath>.\Application\Src\ramp.cpp</FilePath>
             </File>
             <File>
-              <FileName>two_pos.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\Application\Src\two_pos.cpp</FilePath>
-            </File>
-            <File>
               <FileName>three_pos.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\Application\Src\three_pos.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>two_pos.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\Application\Src\two_pos.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -577,51 +577,42 @@
       <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="6.0.0" condition="ARMv6_7_8-M Device">
         <package name="CMSIS" schemaVersion="1.7.7" url="https://www.keil.com/pack/" vendor="ARM" version="6.0.0"/>
         <targetInfos>
-          <targetInfo name="Target 1"/>
+          <targetInfo name="Application"/>
         </targetInfos>
       </component>
       <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.0.0" condition="STM32F1xx CMSIS">
         <package name="STM32F1xx_DFP" schemaVersion="1.7.2" url="https://www.keil.com/pack/" vendor="Keil" version="2.4.1"/>
         <targetInfos>
-          <targetInfo name="Target 1"/>
+          <targetInfo name="Application"/>
         </targetInfos>
       </component>
     </components>
     <files>
-      <file attr="config" category="header" name="RTE_Driver\Config\RTE_Device.h" version="1.1.2">
+      <file attr="config" category="header" name="RTE_Driver\Config\RTE_Device.h" version="0.0.0">
         <instance index="0">RTE\Device\STM32F103C8\RTE_Device.h</instance>
         <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.0.0" condition="STM32F1xx CMSIS"/>
         <package name="STM32F1xx_DFP" schemaVersion="1.7.2" url="https://www.keil.com/pack/" vendor="Keil" version="2.4.1"/>
         <targetInfos>
-          <targetInfo name="Target 1"/>
+          <targetInfo name="Application"/>
         </targetInfos>
       </file>
-      <file attr="config" category="source" condition="STM32F1xx MD ARMCC" name="Device\Source\ARM\startup_stm32f10x_md.s" version="1.0.1">
+      <file attr="config" category="source" condition="STM32F1xx MD ARMCC" name="Device\Source\ARM\startup_stm32f10x_md.s" version="0.0.0">
         <instance index="0">RTE\Device\STM32F103C8\startup_stm32f10x_md.s</instance>
         <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.0.0" condition="STM32F1xx CMSIS"/>
         <package name="STM32F1xx_DFP" schemaVersion="1.7.2" url="https://www.keil.com/pack/" vendor="Keil" version="2.4.1"/>
         <targetInfos>
-          <targetInfo name="Target 1"/>
+          <targetInfo name="Application"/>
         </targetInfos>
       </file>
-      <file attr="config" category="source" name="Device\Source\system_stm32f10x.c" version="1.0.1">
+      <file attr="config" category="source" name="Device\Source\system_stm32f10x.c" version="0.0.0">
         <instance index="0">RTE\Device\STM32F103C8\system_stm32f10x.c</instance>
         <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.0.0" condition="STM32F1xx CMSIS"/>
         <package name="STM32F1xx_DFP" schemaVersion="1.7.2" url="https://www.keil.com/pack/" vendor="Keil" version="2.4.1"/>
         <targetInfos>
-          <targetInfo name="Target 1"/>
+          <targetInfo name="Application"/>
         </targetInfos>
       </file>
     </files>
   </RTE>
-
-  <LayerInfo>
-    <Layers>
-      <Layer>
-        <LayName>GardenCleanWater</LayName>
-        <LayPrjMark>1</LayPrjMark>
-      </Layer>
-    </Layers>
-  </LayerInfo>
 
 </Project>
